--- a/Focus Free Website Template - Free-CSS.com/index.html
+++ b/Focus Free Website Template - Free-CSS.com/index.html
@@ -193,11 +193,11 @@
         </div>
         <div class="col-sm-6 col-md-4 adipiscing">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/10-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="https://soundcloud.com/rustoga/sets/demoreel" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Project Name</h4>
+                    <h4>Soundcloud demoreel </h4>
                   </div>
                 </div>
               </div>
