--- a/index.html
+++ b/index.html
@@ -319,8 +319,9 @@
     <div class="col-md-6">
       <div class="section-title">
         <div class="row"> <img src="img/about.jpg" class="img-responsive pull-left" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
+          <p> Wwise, Ableton Live, Premiere Pro, Photoshop and After Effects are my main tools. I’ve done Marketing for 4 years including Facebook, Wordpress, MailChimp, Twitter and promoting Housemarque games in GDC, Nordic Game, E3 and PlayStation Experience.</p>
+<p>I produce music in my free time and I'm interested in many audiovisual subjects.</p>
+          
           <div class="social">
             <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
