--- a/index.html
+++ b/index.html
@@ -319,8 +319,9 @@
     <div class="col-md-6">
       <div class="section-title">
         <div class="row"> <img src="img/about.jpg" class="img-responsive pull-left" alt="">
-          <p> Wwise, Ableton Live, Premiere Pro, Photoshop and After Effects are my main tools. I’ve done Marketing for 4 years including Facebook, Wordpress, MailChimp, Twitter and promoting Housemarque games in GDC, Nordic Game, E3 and PlayStation Experience.</p>
-<p>I produce music in my free time and I'm interested in many audiovisual subjects.</p>
+          <p> Wwise, Ableton Live, Premiere Pro, Photoshop and After Effects are my main tools.</p>
+		  <p>I’ve done Marketing for 4 years including Facebook, Wordpress, MailChimp, Twitter and promoting Housemarque games in GDC, Nordic Game, E3 and PlayStation Experience.</p>
+<p></p>
           
           <div class="social">
             <ul>
