updated about me section, cleaned names to more specific ones.
'nuf said

--- a/Focus Free Website Template - Free-CSS.com/index.html
+++ b/Focus Free Website Template - Free-CSS.com/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Rudolf Westerholm - Videographer / Sound & Graphic Designer </title>
+<title>Rudolf Westerholm - Video Art / Music & Sound Design </title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -43,7 +43,7 @@
           <div class="col-xs-12 col-md-8">
             <div class="intro-text">
               <h1>Rudolf Westerholm</h1>
-              <p>Videographer / Sound & Graphic Designer</p>
+              <p>Video Art / Music & Sound Design</p>
 			       <div style="position: width: 100%; height: 50%">
     		  
               <a href="#portfolio" class="btn btn-custom btn-lg page-scroll">Portfolio</a> <a href="#contact" class="btn btn-custom btn-lg page-scroll">About Me</a> </div>
@@ -63,10 +63,8 @@
       <ul class="cat">
         <li>
           <ol class="type">
-            <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".lorem">Videos</a></li>
-            <li><a href="#" data-filter=".dolor">Graphic Design</a></li>
-            <li><a href="#" data-filter=".adipiscing">Audiowork</a></li>
+            <li><a href="#" data-filter=".lorem">Video Art</a></li>
+            <li><a href="#" data-filter=".dolor">Music & Sound Design</a></li>
           </ol>
         </li>
       </ul>
@@ -319,8 +317,9 @@
     <div class="col-md-6">
       <div class="section-title">
         <div class="row"> <img src="img/about.jpg" class="img-responsive pull-left" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh.</p>
+          <p> Wwise, Ableton Live, Premiere Pro, Photoshop and After Effects are my main tools.</p>
+<p>I’ve been part of 2-man marketing team for 4 years including Facebook, Wordpress, MailChimp, Twitter and promoting Housemarque games in GDC, Nordic Game, E3 and PlayStation Experience.
+.</p>
           <div class="social">
             <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
