--- a/Rustoga Portfolio/index.html
+++ b/Rustoga Portfolio/index.html
@@ -191,11 +191,11 @@
         </div>
         <div class="col-sm-6 col-md-4 adipiscing">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="https://soundcloud.com/rustoga/sets/demoreel" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="" title="" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Soundcloud demoreel </h4>
+                    <h4></h4>
                   </div>
                 </div>
               </div>
@@ -204,41 +204,41 @@
         </div>
         <div class="col-sm-6 col-md-4 adipiscing">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/11-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/11-large.jpg" title="" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Project Name</h4>
+                    <h4></h4>
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/11-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/11-small.jpg" class="img-responsive" alt=""> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 lorem">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/12-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/12-large.jpg" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Project Name</h4>
+                    <h4></h4>
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/12-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/12-small.jpg" class="img-responsive" alt=""> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 adipiscing">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/13-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/13-large.jpg" title="" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Project Name</h4>
+                    <h4></h4>
                   </div>
                 </div>
               </div>
-              <img src="img/portfolio/13-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/13-small.jpg" class="img-responsive" alt=""> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 dolor">
@@ -252,11 +252,11 @@
         </div>
         <div class="col-sm-6 col-md-4 dolor">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/15-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portfolio/15-large.jpg" title="" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <div class="overlay-caption">
                   <div class="overlay-content">
-                    <h4>Project Name</h4>
+                    <h4></h4>
                   </div>
                 </div>
               </div>
